# adventofcode

./: adventofcode.cabal  package.yaml  run  run2019.sh  run2020.sh  stack.yaml
2019/: D01.hs  D02.hs  D03.hs  D04.hs
2020/: D01.hs  D02.hs  D03.hs  D04.hs
2021/: D01.hs  D02.sql  D02_schema.sql
2024/: D01.hs  D02.hs  D03.hs
