cabal-version:      3.0
name:               adventofcode
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Jan van Brügge
maintainer:         supermanitu@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    build-depends:    base ^>=4.19.1.0
                    , regex-tdfa
    other-modules:    D01
                    , D02
                    , D03
    hs-source-dirs:   2024
    default-language: GHC2021
